myanalyzer.output
Terminals unused in grammar

    TK_ASSGN


State 9 conflicts: 18 shift/reduce
State 12 conflicts: 36 shift/reduce, 23 reduce/reduce
State 51 conflicts: 19 shift/reduce
State 52 conflicts: 17 shift/reduce
State 54 conflicts: 18 shift/reduce
State 55 conflicts: 18 shift/reduce
State 61 conflicts: 1 shift/reduce, 1 reduce/reduce
State 63 conflicts: 19 shift/reduce
State 64 conflicts: 18 shift/reduce
State 66 conflicts: 18 shift/reduce
State 67 conflicts: 18 shift/reduce
State 69 conflicts: 18 shift/reduce
State 73 conflicts: 1 shift/reduce
State 76 conflicts: 3 shift/reduce
State 77 conflicts: 17 shift/reduce
State 81 conflicts: 17 shift/reduce
State 82 conflicts: 1 shift/reduce
State 83 conflicts: 22 shift/reduce
State 92 conflicts: 18 shift/reduce
State 94 conflicts: 19 shift/reduce
State 95 conflicts: 19 shift/reduce
State 96 conflicts: 19 shift/reduce
State 97 conflicts: 19 shift/reduce
State 98 conflicts: 19 shift/reduce
State 99 conflicts: 19 shift/reduce
State 100 conflicts: 19 shift/reduce
State 101 conflicts: 19 shift/reduce
State 102 conflicts: 19 shift/reduce
State 103 conflicts: 19 shift/reduce
State 104 conflicts: 19 shift/reduce
State 105 conflicts: 19 shift/reduce
State 106 conflicts: 19 shift/reduce
State 107 conflicts: 19 shift/reduce
State 108 conflicts: 19 shift/reduce
State 109 conflicts: 19 shift/reduce
State 110 conflicts: 19 shift/reduce
State 111 conflicts: 19 shift/reduce
State 112 conflicts: 19 shift/reduce
State 113 conflicts: 19 shift/reduce
State 115 conflicts: 19 shift/reduce
State 116 conflicts: 19 shift/reduce
State 117 conflicts: 22 shift/reduce
State 118 conflicts: 18 shift/reduce
State 121 conflicts: 18 shift/reduce
State 147 conflicts: 4 shift/reduce
State 152 conflicts: 36 shift/reduce, 23 reduce/reduce
State 160 conflicts: 18 shift/reduce
State 166 conflicts: 1 reduce/reduce
State 170 conflicts: 22 shift/reduce
State 171 conflicts: 22 shift/reduce
State 172 conflicts: 22 shift/reduce
State 173 conflicts: 22 shift/reduce
State 174 conflicts: 22 shift/reduce
State 175 conflicts: 22 shift/reduce
State 176 conflicts: 22 shift/reduce
State 177 conflicts: 22 shift/reduce
State 178 conflicts: 22 shift/reduce
State 179 conflicts: 22 shift/reduce
State 180 conflicts: 22 shift/reduce
State 181 conflicts: 22 shift/reduce
State 182 conflicts: 22 shift/reduce
State 183 conflicts: 22 shift/reduce
State 184 conflicts: 22 shift/reduce
State 185 conflicts: 22 shift/reduce
State 186 conflicts: 22 shift/reduce
State 187 conflicts: 22 shift/reduce
State 188 conflicts: 22 shift/reduce
State 189 conflicts: 22 shift/reduce
State 190 conflicts: 22 shift/reduce
State 191 conflicts: 22 shift/reduce
State 219 conflicts: 18 shift/reduce
State 221 conflicts: 18 shift/reduce
State 223 conflicts: 17 shift/reduce
State 228 conflicts: 18 shift/reduce
State 230 conflicts: 1 reduce/reduce
State 233 conflicts: 1 shift/reduce
State 239 conflicts: 18 shift/reduce
State 250 conflicts: 18 shift/reduce
State 252 conflicts: 1 shift/reduce
State 260 conflicts: 18 shift/reduce
State 262 conflicts: 35 shift/reduce, 23 reduce/reduce
State 264 conflicts: 35 shift/reduce, 23 reduce/reduce
State 271 conflicts: 1 shift/reduce
State 283 conflicts: 1 shift/reduce
State 296 conflicts: 18 shift/reduce
State 297 conflicts: 44 reduce/reduce
State 298 conflicts: 18 shift/reduce
State 299 conflicts: 17 shift/reduce
State 300 conflicts: 18 shift/reduce
State 301 conflicts: 18 shift/reduce
State 332 conflicts: 18 shift/reduce
State 344 conflicts: 17 shift/reduce
State 345 conflicts: 1 shift/reduce
State 357 conflicts: 35 shift/reduce, 23 reduce/reduce
State 361 conflicts: 1 shift/reduce
State 367 conflicts: 18 shift/reduce
State 368 conflicts: 18 shift/reduce
State 372 conflicts: 18 shift/reduce
State 374 conflicts: 18 shift/reduce


Grammar

    0 $accept: input $end

    1 input: compiler

    2 compiler: final_program

    3 final_program: program main main_program KW_ENDDEF OP_SEMI program
    4              | program main main_program KW_ENDDEF OP_SEMI
    5              | main main_program KW_ENDDEF OP_SEMI program
    6              | main main_program KW_ENDDEF OP_SEMI

    7 main: KW_DEF KW_MAIN OP_PAR_L OP_PAR_R OP_MEAN

    8 program: global_declarations
    9        | program global_declarations

   10 global_declarations: var_declarations
   11                    | func_declaration function_code KW_RETURN OP_SEMI KW_ENDDEF OP_SEMI
   12                    | func_declaration function_code KW_RETURN expr OP_SEMI KW_ENDDEF OP_SEMI
   13                    | func_declaration KW_RETURN expr OP_SEMI KW_ENDDEF OP_SEMI
   14                    | func_declaration function_code KW_ENDDEF OP_SEMI
   15                    | KW_COMP TK_IDENT OP_MEAN comp_code KW_ENDCOMP OP_SEMI

   16 func_declaration: KW_DEF TK_IDENT OP_PAR_L func_parameters OP_PAR_R OP_MINUS OP_MORE types OP_MEAN
   17                 | KW_DEF TK_IDENT OP_PAR_L func_parameters OP_PAR_R OP_MINUS OP_MORE KW_VOID OP_MEAN
   18                 | KW_DEF TK_IDENT OP_PAR_L func_parameters OP_PAR_R OP_MEAN
   19                 | KW_DEF TK_IDENT OP_PAR_L OP_PAR_R OP_MINUS OP_MORE types OP_MEAN
   20                 | KW_DEF TK_IDENT OP_PAR_L OP_PAR_R OP_MEAN

   21 func_parameters: %empty
   22                | TK_IDENT OP_MEAN types
   23                | func_parameters OP_COMA TK_IDENT OP_MEAN types
   24                | TK_IDENT OP_BRA_L OP_BRA_R OP_MEAN types
   25                | func_parameters OP_COMA TK_IDENT OP_BRA_L OP_BRA_R OP_MEAN types

   26 function_code: %empty
   27              | local_declarations
   28              | function_code local_declarations

   29 main_program: local_declarations
   30             | main_program local_declarations

   31 local_declarations: var_declarations
   32                   | expr OP_SEMI
   33                   | conditions KW_ENDIF OP_SEMI
   34                   | while_loop KW_ENDWHILE OP_SEMI
   35                   | for_loop KW_ENDFOR OP_SEMI
   36                   | KW_BREAK OP_SEMI
   37                   | KW_CONTINUE OP_SEMI

   38 var_declarations: variable_types OP_ASSIGN expr OP_SEMI
   39                 | variable_types OP_BRA_L legal_array_index OP_BRA_R OP_ASSIGN expr OP_SEMI
   40                 | variable_types OP_BRA_L legal_array_index OP_BRA_R OP_ASSIGN variable_types OP_BRA_L legal_array_index OP_BRA_R OP_SEMI
   41                 | variable_types OP_ASSIGN variable_types OP_BRA_L legal_array_index OP_BRA_R OP_SEMI
   42                 | variable_types OP_BRA_L legal_array_index OP_BRA_R OP_MEAN types OP_SEMI
   43                 | comp_types_of_declarations OP_MEAN types OP_SEMI
   44                 | KW_CONST comp_types_of_declarations OP_ASSIGN data_types OP_MEAN types OP_SEMI
   45                 | KW_CONST comp_types_of_declarations OP_ASSIGN operators data_types OP_MEAN types OP_SEMI

   46 conditions: KW_IF OP_PAR_L expr OP_PAR_R OP_MEAN main_program
   47           | KW_IF OP_PAR_L expr OP_PAR_R OP_MEAN comp_function_code
   48           | conditions KW_ELSE OP_MEAN main_program

   49 while_loop: KW_WHILE OP_PAR_L expr OP_PAR_R OP_MEAN main_program
   50           | KW_WHILE OP_PAR_L expr OP_PAR_R OP_MEAN comp_function_code

   51 for_loop: KW_FOR TK_IDENT KW_IN OP_BRA_L expr OP_MEAN expr OP_BRA_R OP_MEAN main_program
   52         | KW_FOR TK_IDENT KW_IN OP_BRA_L expr OP_MEAN expr OP_BRA_R OP_MEAN comp_function_code
   53         | KW_FOR TK_IDENT KW_IN OP_BRA_L expr OP_MEAN expr OP_MEAN expr OP_BRA_R OP_MEAN main_program

   54 variable_types: TK_IDENT
   55               | KW_HASH TK_IDENT

   56 comp_types_of_declarations: variable_types
   57                           | comp_types_of_declarations OP_COMA variable_types
   58                           | comp_types_of_declarations OP_COMA variable_types OP_BRA_L legal_array_index OP_BRA_R

   59 expr: %empty
   60     | TK_STRING
   61     | TK_INT
   62     | TK_REAL
   63     | KW_TRUE
   64     | KW_FALSE
   65     | variable_types OP_PAR_L OP_PAR_R
   66     | variable_types OP_PAR_L expr OP_PAR_R
   67     | operators expr
   68     | variable_types
   69     | variable_types OP_BRA_L legal_array_index OP_BRA_R
   70     | variable_types OP_BRA_L KW_HASH legal_array_index OP_BRA_R
   71     | variable_types OP_BRA_L variable_types OP_BRA_R
   72     | OP_POINTER expr
   73     | expr OP_COMA expr
   74     | expr OP_DOT expr
   75     | expr OP_PLUS expr
   76     | expr OP_MINUS expr
   77     | expr OP_MUL expr
   78     | expr OP_DIV expr
   79     | expr OP_MOD expr
   80     | expr OP_EQ expr
   81     | expr OP_INEQ expr
   82     | expr OP_LESS expr
   83     | expr OP_EQLESS expr
   84     | expr OP_MORE expr
   85     | expr OP_EQMORE expr
   86     | expr OP_ASSIGN expr
   87     | expr KW_AND expr
   88     | expr KW_OR expr
   89     | expr KW_NOT expr
   90     | expr OP_PLUSEQ expr
   91     | expr OP_MINUSEQ expr
   92     | expr OP_MULEQ expr
   93     | expr OP_DIVEQ expr
   94     | expr OP_MODEQ expr
   95     | OP_PAR_L expr OP_PAR_R
   96     | OP_BRA_L expr OP_BRA_L
   97     | OP_SEMI

   98 legal_array_index: TK_INT
   99                  | TK_IDENT

  100 data_types: TK_INT
  101           | TK_STRING
  102           | TK_REAL

  103 types: KW_STR
  104      | KW_INTEGER
  105      | KW_SCALAR
  106      | KW_BOOLEAN
  107      | TK_IDENT

  108 operators: OP_PLUS
  109          | OP_MINUS
  110          | OP_MUL
  111          | OP_DIV
  112          | OP_MOD
  113          | OP_POWER
  114          | OP_EQ
  115          | OP_INEQ
  116          | OP_LESS
  117          | OP_EQLESS
  118          | OP_MORE
  119          | OP_EQMORE
  120          | OP_ASSIGN
  121          | OP_PLUSEQ
  122          | OP_MINUSEQ
  123          | OP_MULEQ
  124          | OP_DIVEQ
  125          | OP_MODEQ

  126 comp_code: comp_local_declarations
  127          | comp_code comp_local_declarations

  128 comp_local_declarations: %empty
  129                        | comp_initialise_local_declarations
  130                        | comp_func_declaration comp_function_code KW_RETURN OP_SEMI KW_ENDDEF OP_SEMI
  131                        | comp_func_declaration comp_function_code KW_RETURN expr OP_SEMI KW_ENDDEF OP_SEMI
  132                        | comp_func_declaration KW_RETURN expr OP_SEMI KW_ENDDEF OP_SEMI
  133                        | comp_func_declaration comp_function_code KW_ENDDEF OP_SEMI

  134 comp_initialise_local_declarations: comp_var_declarations

  135 comp_var_declarations: KW_HASH TK_IDENT OP_ASSIGN expr OP_SEMI
  136                      | KW_HASH TK_IDENT OP_BRA_L legal_array_index OP_BRA_R OP_ASSIGN expr OP_SEMI
  137                      | KW_HASH TK_IDENT OP_BRA_L legal_array_index OP_BRA_R OP_ASSIGN KW_HASH TK_IDENT OP_BRA_L legal_array_index OP_BRA_R OP_SEMI
  138                      | KW_HASH TK_IDENT OP_ASSIGN TK_IDENT OP_BRA_L legal_array_index OP_BRA_R OP_SEMI
  139                      | KW_HASH TK_IDENT OP_BRA_L legal_array_index OP_BRA_R OP_MEAN types OP_SEMI
  140                      | comp_initialise_types_of_declarations OP_MEAN types OP_SEMI
  141                      | KW_CONST comp_initialise_types_of_declarations OP_ASSIGN data_types OP_MEAN types OP_SEMI
  142                      | KW_CONST comp_initialise_types_of_declarations OP_ASSIGN operators data_types OP_MEAN types OP_SEMI

  143 comp_initialise_types_of_declarations: KW_HASH TK_IDENT
  144                                      | comp_initialise_types_of_declarations OP_COMA KW_HASH TK_IDENT
  145                                      | comp_initialise_types_of_declarations OP_COMA KW_HASH TK_IDENT OP_BRA_L legal_array_index OP_BRA_R

  146 comp_function_code: %empty
  147                   | local_declarations
  148                   | comp_function_code local_declarations

  149 comp_func_declaration: KW_DEF TK_IDENT OP_PAR_L func_parameters OP_PAR_R OP_MINUS OP_MORE types OP_MEAN
  150                      | KW_DEF TK_IDENT OP_PAR_L func_parameters OP_PAR_R OP_MEAN
  151                      | KW_DEF TK_IDENT OP_PAR_L OP_PAR_R OP_MINUS OP_MORE types OP_MEAN
  152                      | KW_DEF TK_IDENT OP_PAR_L OP_PAR_R OP_MEAN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TK_STRING <str> (258) 60 101
    TK_IDENT <str> (259) 15 16 17 18 19 20 22 23 24 25 51 52 53 54 55 99 107 135 136 137 138 139 143 144 145 149 150 151 152
    TK_INT <str> (260) 61 98 100
    TK_REAL <str> (261) 62 102
    TK_ASSGN <str> (262)
    KW_HASH (263) 55 70 135 136 137 138 139 143 144 145
    KW_IF (264) 46 47
    KW_ELSE (265) 48
    KW_INTEGER (266) 104
    KW_FALSE (267) 64
    KW_FOR (268) 51 52 53
    KW_BREAK (269) 36
    KW_DEF (270) 7 16 17 18 19 20 149 150 151 152
    KW_ENDCOMP (271) 15
    KW_SCALAR (272) 105
    KW_CONST (273) 44 45 141 142
    KW_IN (274) 51 52 53
    KW_CONTINUE (275) 37
    KW_ENDDEF (276) 3 4 5 6 11 12 13 14 130 131 132 133
    KW_STR (277) 103
    KW_ENDFOR (278) 35
    KW_NOT (279) 89
    KW_MAIN (280) 7
    KW_BOOLEAN (281) 106
    KW_WHILE (282) 49 50
    KW_AND (283) 87
    KW_RETURN (284) 11 12 13 130 131 132
    KW_TRUE (285) 63
    KW_ENDIF (286) 33
    KW_ENDWHILE (287) 34
    KW_OR (288) 88
    KW_COMP (289) 15
    KW_VOID <str> (290) 17
    OP_PLUS <str> (291) 75 108
    OP_MINUS <str> (292) 16 17 19 76 109 149 151
    OP_MUL <str> (293) 77 110
    OP_DIV <str> (294) 78 111
    OP_MOD <str> (295) 79 112
    OP_POWER <str> (296) 113
    OP_EQ <str> (297) 80 114
    OP_INEQ <str> (298) 81 115
    OP_LESS <str> (299) 82 116
    OP_EQLESS <str> (300) 83 117
    OP_MORE <str> (301) 16 17 19 84 118 149 151
    OP_EQMORE <str> (302) 85 119
    OP_ASSIGN <str> (303) 38 39 40 41 44 45 86 120 135 136 137 138 141 142
    OP_PLUSEQ <str> (304) 90 121
    OP_MINUSEQ <str> (305) 91 122
    OP_MULEQ <str> (306) 92 123
    OP_DIVEQ <str> (307) 93 124
    OP_MODEQ <str> (308) 94 125
    OP_POINTER <str> (309) 72
    OP_PAR_L <str> (310) 7 16 17 18 19 20 46 47 49 50 65 66 95 149 150 151 152
    OP_PAR_R <str> (311) 7 16 17 18 19 20 46 47 49 50 65 66 95 149 150 151 152
    OP_SEMI <str> (312) 3 4 5 6 11 12 13 14 15 32 33 34 35 36 37 38 39 40 41 42 43 44 45 97 130 131 132 133 135 136 137 138 139 140 141 142
    OP_COMA <str> (313) 23 25 57 58 73 144 145
    OP_BRA_L <str> (314) 24 25 39 40 41 42 51 52 53 58 69 70 71 96 136 137 138 139 145
    OP_BRA_R <str> (315) 24 25 39 40 41 42 51 52 53 58 69 70 71 136 137 138 139 145
    OP_DOT <str> (316) 74
    OP_MEAN <str> (317) 7 15 16 17 18 19 20 22 23 24 25 42 43 44 45 46 47 48 49 50 51 52 53 139 140 141 142 149 150 151 152


Nonterminals, with rules where they appear

    $accept (63)
        on left: 0
    input (64)
        on left: 1
        on right: 0
    compiler <str> (65)
        on left: 2
        on right: 1
    final_program <str> (66)
        on left: 3 4 5 6
        on right: 2
    main <str> (67)
        on left: 7
        on right: 3 4 5 6
    program <str> (68)
        on left: 8 9
        on right: 3 4 5 9
    global_declarations <str> (69)
        on left: 10 11 12 13 14 15
        on right: 8 9
    func_declaration <str> (70)
        on left: 16 17 18 19 20
        on right: 11 12 13 14
    func_parameters <str> (71)
        on left: 21 22 23 24 25
        on right: 16 17 18 23 25 149 150
    function_code <str> (72)
        on left: 26 27 28
        on right: 11 12 14 28
    main_program <str> (73)
        on left: 29 30
        on right: 3 4 5 6 30 46 48 49 51 53
    local_declarations <str> (74)
        on left: 31 32 33 34 35 36 37
        on right: 27 28 29 30 147 148
    var_declarations <str> (75)
        on left: 38 39 40 41 42 43 44 45
        on right: 10 31
    conditions <str> (76)
        on left: 46 47 48
        on right: 33 48
    while_loop <str> (77)
        on left: 49 50
        on right: 34
    for_loop <str> (78)
        on left: 51 52 53
        on right: 35
    variable_types <str> (79)
        on left: 54 55
        on right: 38 39 40 41 42 56 57 58 65 66 68 69 70 71
    comp_types_of_declarations <str> (80)
        on left: 56 57 58
        on right: 43 44 45 57 58
    expr <str> (81)
        on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97
        on right: 12 13 32 38 39 46 47 49 50 51 52 53 66 67 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 131 132 135 136
    legal_array_index <str> (82)
        on left: 98 99
        on right: 39 40 41 42 58 69 70 136 137 138 139 145
    data_types <str> (83)
        on left: 100 101 102
        on right: 44 45 141 142
    types <str> (84)
        on left: 103 104 105 106 107
        on right: 16 19 22 23 24 25 42 43 44 45 139 140 141 142 149 151
    operators <str> (85)
        on left: 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125
        on right: 45 67 142
    comp_code <str> (86)
        on left: 126 127
        on right: 15 127
    comp_local_declarations <str> (87)
        on left: 128 129 130 131 132 133
        on right: 126 127
    comp_initialise_local_declarations <str> (88)
        on left: 134
        on right: 129
    comp_var_declarations <str> (89)
        on left: 135 136 137 138 139 140 141 142
        on right: 134
    comp_initialise_types_of_declarations <str> (90)
        on left: 143 144 145
        on right: 140 141 142 144 145
    comp_function_code <str> (91)
        on left: 146 147 148
        on right: 47 50 52 130 131 133 148
    comp_func_declaration <str> (92)
        on left: 149 150 151 152
        on right: 130 131 132 133


State 0

    0 $accept: . input $end
    1 input: . compiler
    2 compiler: . final_program
    3 final_program: . program main main_program KW_ENDDEF OP_SEMI program
    4              | . program main main_program KW_ENDDEF OP_SEMI
    5              | . main main_program KW_ENDDEF OP_SEMI program
    6              | . main main_program KW_ENDDEF OP_SEMI
    7 main: . KW_DEF KW_MAIN OP_PAR_L OP_PAR_R OP_MEAN
    8 program: . global_declarations
    9        | . program global_declarations
   10 global_declarations: . var_declarations
   11                    | . func_declaration function_code KW_RETURN OP_SEMI KW_ENDDEF OP_SEMI
   12                    | . func_declaration function_code KW_RETURN expr OP_SEMI KW_ENDDEF OP_SEMI
   13                    | . func_declaration KW_RETURN expr OP_SEMI KW_ENDDEF OP_SEMI
   14                    | . func_declaration function_code KW_ENDDEF OP_SEMI
   15                    | . KW_COMP TK_IDENT OP_MEAN comp_code KW_ENDCOMP OP_SEMI
   16 func_declaration: . KW_DEF TK_IDENT OP_PAR_L func_parameters OP_PAR_R OP_MINUS OP_MORE types OP_MEAN
   17                 | . KW_DEF TK_IDENT OP_PAR_L func_parameters OP_PAR_R OP_MINUS OP_MORE KW_VOID OP_MEAN
   18                 | . KW_DEF TK_IDENT OP_PAR_L func_parameters OP_PAR_R OP_MEAN
   19                 | . KW_DEF TK_IDENT OP_PAR_L OP_PAR_R OP_MINUS OP_MORE types OP_MEAN
   20                 | . KW_DEF TK_IDENT OP_PAR_L OP_PAR_R OP_MEAN
   38 var_declarations: . variable_types OP_ASSIGN expr OP_SEMI
   39                 | . variable_types OP_BRA_L legal_array_index OP_BRA_R OP_ASSIGN expr OP_SEMI
   40                 | . variable_types OP_BRA_L legal_array_index OP_BRA_R OP_ASSIGN variable_types OP_BRA_L legal_array_index OP_BRA_R OP_SEMI
   41                 | . variable_types OP_ASSIGN variable_types OP_BRA_L legal_array_index OP_BRA_R OP_SEMI
   42                 | . variable_types OP_BRA_L legal_array_index OP_BRA_R OP_MEAN types OP_SEMI
   43                 | . comp_types_of_declarations OP_MEAN types OP_SEMI
   44                 | . KW_CONST comp_types_of_declarations OP_ASSIGN data_types OP_MEAN types OP_SEMI
   45                 | . KW_CONST comp_types_of_declarations OP_ASSIGN operators data_types OP_MEAN types OP_SEMI
   54 variable_types: . TK_IDENT
   55               | . KW_HASH TK_IDENT
   56 comp_types_of_declarations: . variable_types
   57                           | . comp_types_of_declarations OP_COMA variable_types
   58                           | . comp_types_of_declarations OP_COMA variable_types OP_BRA_L legal_array_index OP_BRA_R

    TK_IDENT  shift, and go to state 1
    KW_HASH   shift, and go to state 2
    KW_DEF    shift, and go to state 3
    KW_CONST  shift, and go to state 4
    KW_COMP   shift, and go to state 5

    input                       go to state 6
    compiler                    go to state 7
    final_program               go to state 8
    main                        go to state 9
    program                     go to state 10
    global_declarations         go to state 11
    func_declaration            go to state 12
    var_declarations            go to state 13
    variable_types              go to state 14
    comp_types_of_declarations  go to state 15


State 1

   54 variable_types: TK_IDENT .

    $default  reduce using rule 54 (variable_types)


State 2

   55 variable_types: KW_HASH . TK_IDENT

    TK_IDENT  shift, and go to state 16


State 3

    7 main: KW_DEF . KW_MAIN OP_PAR_L OP_PAR_R OP_MEAN
   16 func_declaration: KW_DEF . TK_IDENT OP_PAR_L func_parameters OP_PAR_R OP_MINUS OP_MORE types OP_MEAN
   17                 | KW_DEF . TK_IDENT OP_PAR_L func_parameters OP_PAR_R OP_MINUS OP_MORE KW_VOID OP_MEAN
   18                 | KW_DEF . TK_IDENT OP_PAR_L func_parameters OP_PAR_R OP_MEAN
   19                 | KW_DEF . TK_IDENT OP_PAR_L OP_PAR_R OP_MINUS OP_MORE types OP_MEAN
   20                 | KW_DEF . TK_IDENT OP_PAR_L OP_PAR_R OP_MEAN

    TK_IDENT  shift, and go to state 17
    KW_MAIN   shift, and go to state 18


State 4

   44 var_declarations: KW_CONST . comp_types_of_declarations OP_ASSIGN data_types OP_MEAN types OP_SEMI
   45                 | KW_CONST . comp_types_of_declarations OP_ASSIGN operators data_types OP_MEAN types OP_SEMI
   54 variable_types: . TK_IDENT
   55               | . KW_HASH TK_IDENT
   56 comp_types_of_declarations: . variable_types
   57                           | . comp_types_of_declarations OP_COMA variable_types
   58                           | . comp_types_of_declarations OP_COMA variable_types OP_BRA_L legal_array_index OP_BRA_R

    TK_IDENT  shift, and go to state 1
    KW_HASH   shift, and go to state 2

    variable_types              go to state 19
    comp_types_of_declarations  go to state 20


State 5

   15 global_declarations: KW_COMP . TK_IDENT OP_MEAN comp_code KW_ENDCOMP OP_SEMI

    TK_IDENT  shift, and go to state 21


State 6

    0 $accept: input . $end

    $end  shift, and go to state 22


State 7

    1 input: compiler .

    $default  reduce using rule 1 (input)


State 8

    2 compiler: final_program .

    $default  reduce using rule 2 (compiler)


State 9

    5 final_program: main . main_program KW_ENDDEF OP_SEMI program
    6              | main . main_program KW_ENDDEF OP_SEMI
   29 main_program: . local_declarations
   30             | . main_program local_declarations
   31 local_declarations: . var_declarations
   32                   | . expr OP_SEMI
   33                   | . conditions KW_ENDIF OP_SEMI
   34                   | . while_loop KW_ENDWHILE OP_SEMI
   35                   | . for_loop KW_ENDFOR OP_SEMI
   36                   | . KW_BREAK OP_SEMI
   37                   | . KW_CONTINUE OP_SEMI
   38 var_declarations: . variable_types OP_ASSIGN expr OP_SEMI
   39                 | . variable_types OP_BRA_L legal_array_index OP_BRA_R OP_ASSIGN expr OP_SEMI
   40                 | . variable_types OP_BRA_L legal_array_index OP_BRA_R OP_ASSIGN variable_types OP_BRA_L legal_array_index OP_BRA_R OP_SEMI
   41                 | . variable_types OP_ASSIGN variable_types OP_BRA_L legal_array_index OP_BRA_R OP_SEMI
   42                 | . variable_types OP_BRA_L legal_array_index OP_BRA_R OP_MEAN types OP_SEMI
   43                 | . comp_types_of_declarations OP_MEAN types OP_SEMI
   44                 | . KW_CONST comp_types_of_declarations OP_ASSIGN data_types OP_MEAN types OP_SEMI
   45                 | . KW_CONST comp_types_of_declarations OP_ASSIGN operators data_types OP_MEAN types OP_SEMI
   46 conditions: . KW_IF OP_PAR_L expr OP_PAR_R OP_MEAN main_program
   47           | . KW_IF OP_PAR_L expr OP_PAR_R OP_MEAN comp_function_code
   48           | . conditions KW_ELSE OP_MEAN main_program
   49 while_loop: . KW_WHILE OP_PAR_L expr OP_PAR_R OP_MEAN main_program
   50           | . KW_WHILE OP_PAR_L expr OP_PAR_R OP_MEAN comp_function_code
   51 for_loop: . KW_FOR TK_IDENT KW_IN OP_BRA_L expr OP_MEAN expr OP_BRA_R OP_MEAN main_program
   52         | . KW_FOR TK_IDENT KW_IN OP_BRA_L expr OP_MEAN expr OP_BRA_R OP_MEAN comp_function_code
   53         | . KW_FOR TK_IDENT KW_IN OP_BRA_L expr OP_MEAN expr OP_MEAN expr OP_BRA_R OP_MEAN main_program
   54 variable_types: . TK_IDENT
   55               | . KW_HASH TK_IDENT
   56 comp_types_of_declarations: . variable_types
   57                           | . comp_types_of_declarations OP_COMA variable_types
   58                           | . comp_types_of_declarations OP_COMA variable_types OP_BRA_L legal_array_index OP_BRA_R
   59 expr: . %empty  [KW_NOT, KW_AND, KW_OR, OP_PLUS, OP_MINUS, OP_MUL, OP_DIV, OP_MOD, OP_EQ, OP_INEQ, OP_LESS, OP_EQLESS, OP_MORE, OP_EQMORE, OP_ASSIGN, OP_PLUSEQ, OP_MINUSEQ, OP_MULEQ, OP_DIVEQ, OP_MODEQ, OP_SEMI, OP_COMA, OP_DOT]
   60     | . TK_STRING
   61     | . TK_INT
   62     | . TK_REAL
   63     | . KW_TRUE
   64     | . KW_FALSE
   65     | . variable_types OP_PAR_L OP_PAR_R
   66     | . variable_types OP_PAR_L expr OP_PAR_R
   67     | . operators expr
   68     | . variable_types
   69     | . variable_types OP_BRA_L legal_array_index OP_BRA_R
   70     | . variable_types OP_BRA_L KW_HASH legal_array_index OP_BRA_R
   71     | . variable_types OP_BRA_L variable_types OP_BRA_R
   72     | . OP_POINTER expr
   73     | . expr OP_COMA expr
   74     | . expr OP_DOT expr
   75     | . expr OP_PLUS expr
   76     | . expr OP_MINUS expr
   77     | . expr OP_MUL expr
   78     | . expr OP_DIV expr
   79     | . expr OP_MOD expr
   80     | . expr OP_EQ expr
   81     | . expr OP_INEQ expr
   82     | . expr OP_LESS expr
   83     | . expr OP_EQLESS expr
   84     | . expr OP_MORE expr
   85     | . expr OP_EQMORE expr
   86     | . expr OP_ASSIGN expr
   87     | . expr KW_AND expr
   88     | . expr KW_OR expr
   89     | . expr KW_NOT expr
   90     | . expr OP_PLUSEQ expr
   91     | . expr OP_MINUSEQ expr
   92     | . expr OP_MULEQ expr
   93     | . expr OP_DIVEQ expr
   94     | . expr OP_MODEQ expr
   95     | . OP_PAR_L expr OP_PAR_R
   96     | . OP_BRA_L expr OP_BRA_L
   97     | . OP_SEMI
  108 operators: . OP_PLUS
  109          | . OP_MINUS
  110          | . OP_MUL
  111          | . OP_DIV
  112          | . OP_MOD
  113          | . OP_POWER
  114          | . OP_EQ
  115          | . OP_INEQ
  116          | . OP_LESS
  117          | . OP_EQLESS
  118          | . OP_MORE
  119          | . OP_EQMORE
  120          | . OP_ASSIGN
  121          | . OP_PLUSEQ
  122          | . OP_MINUSEQ
  123          | . OP_MULEQ
  124          | . OP_DIVEQ
  125          | . OP_MODEQ

    TK_STRING    shift, and go to state 23
    TK_IDENT     shift, and go to state 1
    TK_INT       shift, and go to state 24
    TK_REAL      shift, and go to state 25
    KW_HASH      shift, and go to state 2
    KW_IF        shift, and go to state 26
    KW_FALSE     shift, and go to state 27
    KW_FOR       shift, and go to state 28
    KW_BREAK     shift, and go to state 29
    KW_CONST     shift, and go to state 4
    KW_CONTINUE  shift, and go to state 30
    KW_WHILE     shift, and go to state 31
    KW_TRUE      shift, and go to state 32
    OP_PLUS      shift, and go to state 33
    OP_MINUS     shift, and go to state 34
    OP_MUL       shift, and go to state 35
    OP_DIV       shift, and go to state 36
    OP_MOD       shift, and go to state 37
    OP_POWER     shift, and go to state 38
    OP_EQ        shift, and go to state 39
    OP_INEQ      shift, and go to state 40
    OP_LESS      shift, and go to state 41
    OP_EQLESS    shift, and go to state 42
    OP_MORE      shift, and go to state 43
    OP_EQMORE    shift, and go to state 44
    OP_ASSIGN    shift, and go to state 45
    OP_PLUSEQ    shift, and go to state 46
    OP_MINUSEQ   shift, and go to state 47
    OP_MULEQ     shift, and go to state 48
    OP_DIVEQ     shift, and go to state 49
    OP_MODEQ     shift, and go to state 50
    OP_POINTER   shift, and go to state 51
    OP_PAR_L     shift, and go to state 52
    OP_SEMI      shift, and go to state 53
    OP_BRA_L     shift, and go to state 54

    OP_PLUS     [reduce using rule 59 (expr)]
    OP_MINUS    [reduce using rule 59 (expr)]
    OP_MUL      [reduce using rule 59 (expr)]
    OP_DIV      [reduce using rule 59 (expr)]
    OP_MOD      [reduce using rule 59 (expr)]
    OP_EQ       [reduce using rule 59 (expr)]
    OP_INEQ     [reduce using rule 59 (expr)]
    OP_LESS     [reduce using rule 59 (expr)]
    OP_EQLESS   [reduce using rule 59 (expr)]
    OP_MORE     [reduce using rule 59 (expr)]
    OP_EQMORE   [reduce using rule 59 (expr)]
    OP_ASSIGN   [reduce using rule 59 (expr)]
    OP_PLUSEQ   [reduce using rule 59 (expr)]
    OP_MINUSEQ  [reduce using rule 59 (expr)]
    OP_MULEQ    [reduce using rule 59 (expr)]
    OP_DIVEQ    [reduce using rule 59 (expr)]
    OP_MODEQ    [reduce using rule 59 (expr)]
    OP_SEMI     [reduce using rule 59 (expr)]
    $default    reduce using rule 59 (expr)
